Fixed main screen layout. Now the select file button is aligned right after the prompt text and they are all in center of the page.

--- a/FileSharing/wwwroot/css/main.css
+++ b/FileSharing/wwwroot/css/main.css
@@ -1,13 +1,14 @@
 ﻿body {
-    
 }
 
 #file-entry-block {
     background-color: azure;
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .btn-standard {
-    max-height: 100%;
+    margin-left: 6px;
+    align-self: center;
 }
